--- a/index.html
+++ b/index.html
@@ -36,88 +36,87 @@
 					
 					<img src="assets/images/wsmore.png" alt="wsmore" width="150" height="50" class="logo">
 
-					<br /><br />
-					<!--<iframe src=""name="iframe2"width="80%" height="500"></iframe>  target="iframe2"-->
-
+					<iframe src=""name="iframe2"></iframe>   <!-- target="iframe2" -->	
+					
 					<h1>VIRTUAL REALITY</h1>
 					<p class="abstract-inline"><strong>Bagno fotorealismo:</strong> <a href="assets/video/bigelli.mp4" 
-						target="_blank" style="color:#fff;"> esperienza fotorealismo di un bagno</a></p>
+						target="iframe2" style="color:#fff;"> esperienza fotorealismo di un bagno</a></p>
 					<p class="abstract-inline"><strong>Cucina fotorealismo:</strong> <a href="assets/video/scavolini.mp4" 
-						target="_blank" style="color:#fff;"> esperienza fotorealismo di una cucina</a></p>
+						target="iframe2" style="color:#fff;"> esperienza fotorealismo di una cucina</a></p>
 					<p class="abstract-inline"><strong>Hotel Fotorealismo:</strong> <a href="assets/video/ciani.mp4" 
-							target="_blank" style="color:#fff;"> esperienza fotorealismo di una stanza d'albergo</a></p>
+							target="iframe2" style="color:#fff;"> esperienza fotorealismo di una stanza d'albergo</a></p>
 					<p class="abstract-inline"><strong>Living fotorealismo:</strong> <a href="assets/video/minotti.mp4" 
-							target="_blank" style="color:#fff;"> esperienza fotorealismo di un living</a></p>			
+							target="iframe2" style="color:#fff;"> esperienza fotorealismo di un living</a></p>			
 					<p class="abstract-inline"><strong>Building constraction:</strong> <a href="assets/video/m2.mp4"
-							target="_blank" style="color:#fff;"> esperienza training sulla realizzazione di una abitazione</a></p>							
+							target="iframe2" style="color:#fff;"> esperienza training sulla realizzazione di una abitazione</a></p>							
 					<p class="abstract-inline"><strong>Jungle:</strong> <a href="assets/video/jungle.mp4"
-							target="_blank" style="color:#fff;"> esperienza VR arrampicata</a></p>		
+							target="iframe2" style="color:#fff;"> esperienza VR arrampicata</a></p>		
 					<p class="abstract-inline"><strong>Finiture pareti:</strong> <a href="assets/video/oikos.mp4"
-							target="_blank" style="color:#fff;"> esperienza di scelta di finiture per pareti</a></p>							
+							target="iframe2" style="color:#fff;"> esperienza di scelta di finiture per pareti</a></p>							
 					<p class="abstract-inline"><strong>Modellini trivelle:</strong> <a href="assets/video/SoilmecVR.mp4" 
-							target="_blank"	style="color:#fff;">esperienza VR modellini trivelle</a></p>			
-					<p class="abstract-inline"><strong>Museum:</strong> <a href="assets/video/SoilmecVRGo.mp4" target="_blank"
+							target="iframe2"	style="color:#fff;">esperienza VR modellini trivelle</a></p>			
+					<p class="abstract-inline"><strong>Museum:</strong> <a href="assets/video/SoilmecVRGo.mp4" target="iframe2"
 							style="color:#fff;">esperienza VR museo su Meta Quest</a></p>
-					<p class="abstract-inline"><strong>Laboratory:</strong> <a href="assets/video/ITS.mp4" target="_blank"
+					<p class="abstract-inline"><strong>Laboratory:</strong> <a href="assets/video/ITS.mp4" target="iframe2"
 							style="color:#fff;">esperimento da laboratorio in VR su Meta Quest</a></p>
-					<p class="abstract-inline"><strong>Video 360 More:</strong> <a href="assets/video/video360template.mp4" target="_blank"
+					<p class="abstract-inline"><strong>Video 360 More:</strong> <a href="assets/video/video360template.mp4" target="iframe2"
 								style="color:#fff;">visualizzatore video 360 su Meta Quest</a></p>
-					<p class="abstract-inline"><strong>UniTo:</strong> <a href="assets/video/unito.mp4" target="_blank"
+					<p class="abstract-inline"><strong>UniTo:</strong> <a href="assets/video/unito.mp4" target="iframe2"
 							style="color:#fff;">Eye tracking</a></p>
-					<p class="abstract-inline"><strong>Varjo:</strong> <a href="assets/video/varjo.mp4" target="_blank"
+					<p class="abstract-inline"><strong>Varjo:</strong> <a href="assets/video/varjo.mp4" target="iframe2"
 							style="color:#fff;">Esempio di utilizzo del visore varjo</a></p>										
 
 					<h1>AUGMENTED REALITY</h1>
 					<p class="abstract-inline"><strong>Model Viewer:</strong> <a href="https://diegoue8.github.io/model-viewer-more/"
 						target="_blank" style="color:#fff;"> Example of model viewer per la realtà aumentata</a></p>
 					<p class="abstract-inline"><strong>Hololens 2:</strong> <a href="https://design.wslabs.it/vr/work/work/ARExperience.mp4"
-						target="_blank" style="color:#fff;"> Visualizzatore di molecole in AR</a></p>
+						target="iframe2" style="color:#fff;"> Visualizzatore di molecole in AR</a></p>
 					<p class="abstract-inline"><strong>AR mobile:</strong> <a href="assets/video/tiemme_video.mp4"
-						target="_blank" style="color:#fff;"> landing page per rubinetti in AR</a></p>
+						target="iframe2" style="color:#fff;"> landing page per rubinetti in AR</a></p>
 					<p class="abstract-inline"><strong>AR Marker:</strong> <a href="assets/images/tombapicena.jpeg"
-						target="_blank" style="color:#fff;"> Multi marker per museo AR</a></p>							
+						target="iframe2" style="color:#fff;"> Multi marker per museo AR</a></p>							
 					<p class="abstract-inline"><strong>Spark AR:</strong> <a href="https://www.facebook.com/fbcameraeffects/tryit/469976673558777/"
 						target="_blank" style="color:#fff;"> Filtro fb/instagram</a></p>
 
 
 					<h1>SHOWROOM</h1>
-					<p class="abstract-inline"><strong>Arcadia Showroom:</strong> <a href="assets/video/arcadia.mp4" target="_blank"
+					<p class="abstract-inline"><strong>Arcadia Showroom:</strong> <a href="assets/video/arcadia.mp4" target="iframe2"
 							style="color:#fff;"> Creazione ambientazione 3D e render </a></p>
-					<p class="abstract-inline"><strong>B.Here Desktop:</strong> <a href="assets/video/bheredesktop.mp4" target="_blank"
+					<p class="abstract-inline"><strong>B.Here Desktop:</strong> <a href="assets/video/bheredesktop.mp4" target="iframe2"
 							style="color:#fff;"> Piattaforma di showroom proprietaria 360 video simulazione Desktop </a></p>
-					<p class="abstract-inline"><strong>B.Here VR:</strong> <a href="assets/video/bherevr.mp4" target="_blank" 
+					<p class="abstract-inline"><strong>B.Here VR:</strong> <a href="assets/video/bherevr.mp4" target="iframe2" 
 							style="color:#fff;"> Piattaforma di showroom proprietaria 360 video Simulazione VR </a></p>
-					<p class="abstract-inline"><strong>B.Here Santoni:</strong> <a href="assets/video/b-here-santoni.mp4" target="_blank"
+					<p class="abstract-inline"><strong>B.Here Santoni:</strong> <a href="assets/video/b-here-santoni.mp4" target="iframe2"
 								style="color:#fff;"> Shooting fotografico e realizzazione modelli 3D </a></p>
-					<p class="abstract-inline"><strong>Showroom 360:</strong> <a href="https://design.wslabs.it/vr/360/app-files/index.html" target="_blank"
+					<p class="abstract-inline"><strong>Showroom 360:</strong> <a href="https://design.wslabs.it/vr/360/app-files/index.html" target="iframe2"
 							style="color:#fff;"> Showroom composto da render a partire da ambientazioni 3D</a></p>
 
 					<h1>WEB 4.0</h1>
-					<p class="abstract-inline"><strong>Spatial:</strong> <a	href="assets/video/Spatial.mp4" target="_blank" 
+					<p class="abstract-inline"><strong>Spatial:</strong> <a	href="assets/video/Spatial.mp4" target="iframe2" 
 						style="color:#fff;"> Metaverso in Spatial</a></p>
-					<p class="abstract-inline"><strong>Tau-marin:</strong> <a href="https://www.tau-marin.it/prodotti/scalare-33/" target="_blank" 
+					<p class="abstract-inline"><strong>Tau-marin:</strong> <a href="https://www.tau-marin.it/prodotti/scalare-33/" target="iframe2" 
 						style="color:#fff;"> Scheda prodotto (scroll) modello 3D spazzolino</a></p>
-					<p class="abstract-inline"><strong>360 Viewer:</strong> <a href="https://design.wslabs.it/vr/3drotator/test.html" target="_blank" 
+					<p class="abstract-inline"><strong>360 Viewer:</strong> <a href="https://design.wslabs.it/vr/3drotator/test.html" target="iframe2" 
 						style="color:#fff;"> Test viewer 360 in WEBGL</a></p>
 
 					<h1>RENDER ANIMATION</h1>
-					<p class="abstract-inline"><strong>Galvanina:</strong> <a href="assets/video/galvanina.mp4" target="_blank"
+					<p class="abstract-inline"><strong>Galvanina:</strong> <a href="assets/video/galvanina.mp4" target="iframe2"
 							style="color:#fff;"> Animazione 3D</a></p>
-					<p class="abstract-inline"><strong>Tau-marin:</strong> <a href="assets/video/tau.mp4" target="_blank" 
+					<p class="abstract-inline"><strong>Tau-marin:</strong> <a href="assets/video/tau.mp4" target="iframe2" 
 							style="color:#fff;"> Animazione 3D</a></p>
-					<p class="abstract-inline"><strong>Giorgetti Progetti:</strong> <a href="assets/video/Giorgetti_progetti.mp4" target="_blank" 
+					<p class="abstract-inline"><strong>Giorgetti Progetti:</strong> <a href="assets/video/Giorgetti_progetti.mp4" target="iframe2" 
 							style="color:#fff;"> Animazione 3D</a></p>
-					<p class="abstract-inline"><strong>Giorgetti PLY:</strong> <a href="assets/video/Giorgetti_ply.mp4" target="_blank" 
+					<p class="abstract-inline"><strong>Giorgetti PLY:</strong> <a href="assets/video/Giorgetti_ply.mp4" target="iframe2" 
 							style="color:#fff;"> Animazione 3D</a></p>
-					<p class="abstract-inline"><strong>Giorgetti Ibla:</strong> <a href="assets/video/Giorgetti_ibla.mp4" target="_blank" 
+					<p class="abstract-inline"><strong>Giorgetti Ibla:</strong> <a href="assets/video/Giorgetti_ibla.mp4" target="iframe2" 
 							style="color:#fff;"> Animazione 3D</a></p>	
-					<p class="abstract-inline"><strong>Dermon:</strong> <a href="assets/video/dermon.mp4" target="_blank" 
+					<p class="abstract-inline"><strong>Dermon:</strong> <a href="assets/video/dermon.mp4" target="iframe2" 
 							style="color:#fff;"> Animazione 3D</a></p>	
-					<p class="abstract-inline"><strong>Valagro:</strong> <a href="assets/video/valagro.mp4" target="_blank" 
+					<p class="abstract-inline"><strong>Valagro:</strong> <a href="assets/video/valagro.mp4" target="iframe2" 
 							style="color:#fff;"> Animazione 3D</a></p>	
-					<p class="abstract-inline"><strong>Scavolini:</strong> <a href="assets/video/video-componibile.mp4" target="_blank"
+					<p class="abstract-inline"><strong>Scavolini:</strong> <a href="assets/video/video-componibile.mp4" target="iframe2"
 							style="color:#fff;"> Animazione 3D</a></p>
-					<p class="abstract-inline"><strong>Arcade:</strong> <a href="assets/video/Arcade.mp4" target="_blank" 
+					<p class="abstract-inline"><strong>Arcade:</strong> <a href="assets/video/Arcade.mp4" target="iframe2" 
 							style="color:#fff;"> Animazione 3D</a></p>					
 				</div>
 			</div>
