--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 					<h1>AUGMENTED REALITY</h1>
 					<p class="abstract-inline"><strong>Model Viewer:</strong> <a href="https://diegoue8.github.io/model-viewer-more/"
 						target="_blank" style="color:#fff;"> Example of model viewer per la realtà aumentata</a></p>
-					<p class="abstract-inline"><strong>Hololens 2:</strong> <a href="https://design.wslabs.it/vr/work/work/ARExperience.mp4"
+					<p class="abstract-inline"><strong>Hololens 2:</strong> <a href="assets/video/ARExperience.mp4"
 						target="iframe2" style="color:#fff;"> Visualizzatore di molecole in AR</a></p>
 					<p class="abstract-inline"><strong>AR mobile:</strong> <a href="assets/video/tiemme_video.mp4"
-						target="iframe2" style="color:#fff;"> landing page per rubinetti in AR</a></p>
+						target="_blank" style="color:#fff;"> landing page per rubinetti in AR</a></p>
 					<p class="abstract-inline"><strong>AR Marker:</strong> <a href="assets/images/tombapicena.jpeg"
 						target="iframe2" style="color:#fff;"> Multi marker per museo AR</a></p>							
 					<p class="abstract-inline"><strong>Spark AR:</strong> <a href="https://www.facebook.com/fbcameraeffects/tryit/469976673558777/"
@@ -80,7 +80,7 @@
 
 
 					<h1>SHOWROOM</h1>
-					<p class="abstract-inline"><strong>Arcadia Showroom:</strong> <a href="assets/video/arcadia.mp4" target="iframe2"
+					<p class="abstract-inline"><strong>Arcadia Showroom:</strong> <a href="assets/video/Arcadia.mp4" target="iframe2"
 							style="color:#fff;"> Creazione ambientazione 3D e render </a></p>
 					<p class="abstract-inline"><strong>B.Here Desktop:</strong> <a href="assets/video/bheredesktop.mp4" target="iframe2"
 							style="color:#fff;"> Piattaforma di showroom proprietaria 360 video simulazione Desktop </a></p>
@@ -102,7 +102,7 @@
 					<h1>RENDER ANIMATION</h1>
 					<p class="abstract-inline"><strong>Galvanina:</strong> <a href="assets/video/galvanina.mp4" target="iframe2"
 							style="color:#fff;"> Animazione 3D</a></p>
-					<p class="abstract-inline"><strong>Tau-marin:</strong> <a href="assets/video/tau.mp4" target="iframe2" 
+					<p class="abstract-inline"><strong>Tau-marin:</strong> <a href="assets/video/tau-marin.mp4" target="iframe2" 
 							style="color:#fff;"> Animazione 3D</a></p>
 					<p class="abstract-inline"><strong>Giorgetti Progetti:</strong> <a href="assets/video/Giorgetti_progetti.mp4" target="iframe2" 
 							style="color:#fff;"> Animazione 3D</a></p>
@@ -112,7 +112,7 @@
 							style="color:#fff;"> Animazione 3D</a></p>	
 					<p class="abstract-inline"><strong>Dermon:</strong> <a href="assets/video/dermon.mp4" target="iframe2" 
 							style="color:#fff;"> Animazione 3D</a></p>	
-					<p class="abstract-inline"><strong>Valagro:</strong> <a href="assets/video/valagro.mp4" target="iframe2" 
+					<p class="abstract-inline"><strong>Valagro:</strong> <a href="assets/video/valagro_talete.mp4" target="iframe2" 
 							style="color:#fff;"> Animazione 3D</a></p>	
 					<p class="abstract-inline"><strong>Scavolini:</strong> <a href="assets/video/video-componibile.mp4" target="iframe2"
 							style="color:#fff;"> Animazione 3D</a></p>
