--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							style="color:#fff;">esperimento da laboratorio in VR su Meta Quest</a></p>
 					<p class="abstract-inline"><strong>Video 360 More:</strong> <a href="assets/video/video360template.mp4" target="iframe2"
 								style="color:#fff;">visualizzatore video 360 su Meta Quest</a></p>
-					<p class="abstract-inline"><strong>UniTo:</strong> <a href="assets/video/unito.mp4" target="iframe2"
+					<p class="abstract-inline"><strong>UniTo:</strong> <a href="assets/video/unito.mp4" target="_blank"
 							style="color:#fff;">Eye tracking</a></p>
 					<p class="abstract-inline"><strong>Varjo:</strong> <a href="assets/video/varjo.mp4" target="iframe2"
 							style="color:#fff;">Esempio di utilizzo del visore varjo</a></p>										
@@ -72,7 +72,7 @@
 					<p class="abstract-inline"><strong>Hololens 2:</strong> <a href="assets/video/ARExperience.mp4"
 						target="iframe2" style="color:#fff;"> Visualizzatore di molecole in AR</a></p>
 					<p class="abstract-inline"><strong>AR mobile:</strong> <a href="assets/video/tiemme_video.mp4"
-						target="_blank" style="color:#fff;"> landing page per rubinetti in AR</a></p>
+						target="iframe2" style="color:#fff;"> landing page per rubinetti in AR</a></p>
 					<p class="abstract-inline"><strong>AR Marker:</strong> <a href="assets/images/tombapicena.jpeg"
 						target="iframe2" style="color:#fff;"> Multi marker per museo AR</a></p>							
 					<p class="abstract-inline"><strong>Spark AR:</strong> <a href="https://www.facebook.com/fbcameraeffects/tryit/469976673558777/"
