--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
 					<!--<iframe src=""name="iframe2"></iframe>    target="iframe2" -->	
 					
 					<h1>VIRTUAL REALITY</h1>
+					<p class="abstract-inline"><strong>Laboratory (formazione):</strong> <a href="assets/video/ITS.mp4" target="_blank"
+						style="color:#fff;">esperimento da laboratorio in VR su Meta Quest</a></p>
+					<p class="abstract-inline"><strong>immerSEE (video 360):</strong> <a href="assets/video/video360template.mp4" target="_blank"
+							style="color:#fff;">visualizzatore video 360 su Meta Quest</a></p>
+					<p class="abstract-inline"><strong>Varjo:</strong> <a href="assets/video/varjo.mp4" target="_blank"
+						style="color:#fff;">Esempio di utilizzo del visore varjo</a></p>
+					<p class="abstract-inline"><strong>UniTo:</strong> <a href="assets/video/unito.mp4" target="_blank"
+							style="color:#fff;">Eye tracking</a></p>	
+					<p class="abstract-inline"><strong>Modellini trivelle:</strong> <a href="assets/video/SoilmecVR.mp4" 
+							target="_blank"	style="color:#fff;">esperienza VR modellini trivelle</a></p>			
+					<p class="abstract-inline"><strong>Museum:</strong> <a href="assets/video/SoilmecVRGo.mp4" target="_blank"
+							style="color:#fff;">esperienza VR museo su Meta Quest</a></p>		
+					<p class="abstract-inline"><strong>Building constraction:</strong> <a href="assets/video/m2.mp4"
+							target="_blank" style="color:#fff;"> esperienza training sulla realizzazione di una abitazione</a></p>							
+					<p class="abstract-inline"><strong>Jungle:</strong> <a href="assets/video/jungle.mp4"
+							target="_blank" style="color:#fff;"> esperienza VR arrampicata</a></p>		
+					<h2>FOTOREALISMO</h2>
 					<p class="abstract-inline"><strong>Bagno fotorealismo:</strong> <a href="assets/video/bigelli.mp4" 
 						target="_blank" style="color:#fff;"> esperienza fotorealismo di un bagno</a></p>
 					<p class="abstract-inline"><strong>Cucina fotorealismo:</strong> <a href="assets/video/scavolini.mp4" 
@@ -46,26 +63,10 @@
 					<p class="abstract-inline"><strong>Hotel Fotorealismo:</strong> <a href="assets/video/ciani.mp4" 
 							target="_blank" style="color:#fff;"> esperienza fotorealismo di una stanza d'albergo</a></p>
 					<p class="abstract-inline"><strong>Living fotorealismo:</strong> <a href="assets/video/minotti.mp4" 
-							target="_blank" style="color:#fff;"> esperienza fotorealismo di un living</a></p>			
-					<p class="abstract-inline"><strong>Building constraction:</strong> <a href="assets/video/m2.mp4"
-							target="_blank" style="color:#fff;"> esperienza training sulla realizzazione di una abitazione</a></p>							
-					<p class="abstract-inline"><strong>Jungle:</strong> <a href="assets/video/jungle.mp4"
-							target="_blank" style="color:#fff;"> esperienza VR arrampicata</a></p>		
+							target="_blank" style="color:#fff;"> esperienza fotorealismo di un living</a></p>	
 					<p class="abstract-inline"><strong>Finiture pareti:</strong> <a href="assets/video/oikos.mp4"
 							target="_blank" style="color:#fff;"> esperienza di scelta di finiture per pareti</a></p>							
-					<p class="abstract-inline"><strong>Modellini trivelle:</strong> <a href="assets/video/SoilmecVR.mp4" 
-							target="_blank"	style="color:#fff;">esperienza VR modellini trivelle</a></p>			
-					<p class="abstract-inline"><strong>Museum:</strong> <a href="assets/video/SoilmecVRGo.mp4" target="_blank"
-							style="color:#fff;">esperienza VR museo su Meta Quest</a></p>
-					<p class="abstract-inline"><strong>Laboratory (formazione):</strong> <a href="assets/video/ITS.mp4" target="_blank"
-							style="color:#fff;">esperimento da laboratorio in VR su Meta Quest</a></p>
-					<p class="abstract-inline"><strong>immerSEE (video 360):</strong> <a href="assets/video/video360template.mp4" target="_blank"
-								style="color:#fff;">visualizzatore video 360 su Meta Quest</a></p>
-					<p class="abstract-inline"><strong>UniTo:</strong> <a href="assets/video/unito.mp4" target="_blank"
-							style="color:#fff;">Eye tracking</a></p>
-					<p class="abstract-inline"><strong>Varjo:</strong> <a href="assets/video/varjo.mp4" target="_blank"
-							style="color:#fff;">Esempio di utilizzo del visore varjo</a></p>										
-
+									
 					<h1>AUGMENTED REALITY</h1>
 					<p class="abstract-inline"><strong>Model Viewer:</strong> <a href="https://diegoue8.github.io/model-viewer-more/"
 						target="_blank" style="color:#fff;"> Example of model viewer per la realtà aumentata</a></p>
@@ -78,8 +79,13 @@
 					<p class="abstract-inline"><strong>Spark AR:</strong> <a href="https://www.facebook.com/fbcameraeffects/tryit/469976673558777/"
 						target="_blank" style="color:#fff;"> Filtro fb/instagram</a></p>
 
-
 					<h1>SHOWROOM</h1>
+					<p class="abstract-inline"><strong>Showroom 360:</strong> <a href="https://design.wslabs.it/vr/360/app-files/index.html" target="_blank"
+						style="color:#fff;"> Showroom composto da render a partire da ambientazioni 3D</a></p>
+					<h2>METAVERSO</h2>
+					<p class="abstract-inline"><strong>Spatial More Hall:</strong> <a	href="https://www.spatial.io/s/Hall-More-643ed0842cdf0e61cc2868f1?share=4297892291291731761" target="_blank" 
+						style="color:#fff;"> Metaverso in Spatial</a></p>
+					<h2>B-HERE</h2>
 					<p class="abstract-inline"><strong>Arcadia Showroom:</strong> <a href="assets/video/Arcadia.mp4" target="_blank"
 							style="color:#fff;"> Creazione ambientazione 3D e render </a></p>
 					<p class="abstract-inline"><strong>B.Here Desktop:</strong> <a href="assets/video/bheredesktop.mp4" target="_blank"
@@ -88,12 +94,8 @@
 							style="color:#fff;"> Piattaforma di showroom proprietaria 360 video Simulazione VR </a></p>
 					<p class="abstract-inline"><strong>B.Here Santoni:</strong> <a href="assets/video/b-here-santoni.mp4" target="_blank"
 								style="color:#fff;"> Shooting fotografico e realizzazione modelli 3D </a></p>
-					<p class="abstract-inline"><strong>Showroom 360:</strong> <a href="https://design.wslabs.it/vr/360/app-files/index.html" target="_blank"
-							style="color:#fff;"> Showroom composto da render a partire da ambientazioni 3D</a></p>
 
 					<h1>WEB 4.0</h1>
-					<p class="abstract-inline"><strong>Spatial More Hall:</strong> <a	href="https://www.spatial.io/s/Hall-More-643ed0842cdf0e61cc2868f1?share=4297892291291731761" target="_blank" 
-						style="color:#fff;"> Metaverso in Spatial</a></p>
 					<p class="abstract-inline"><strong>Tau-marin:</strong> <a href="https://www.tau-marin.it/prodotti/scalare-33/" target="_blank" 
 						style="color:#fff;"> Scheda prodotto (scroll) modello 3D spazzolino</a></p>
 					<p class="abstract-inline"><strong>360 Viewer:</strong> <a href="https://design.wslabs.it/vr/3drotator/test.html" target="_blank" 
